--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Electron i18n Editor</title>
 
-        <link rel="stylesheet" href="./style/style.css">
+        <link rel="stylesheet" href="./style/style.less">
     </head>
 
     <body>
@@ -12,7 +12,6 @@
         <div id="horizon"></div>
 
         <script>
-            require("babel-register");
             window.$ = window.jQuery = require("jquery");
 
             // noinspection JSUnresolvedVariable
