--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Electron i18n Editor</title>
 
-        <link rel="stylesheet" href="./style/style.less">
+        <link rel="stylesheet" href="style/style.less">
     </head>
 
     <body>
